<resources>
    <string name="app_name">MyGameList</string>
    <string name="splashscreen_background_image">SplashScreen Background Image</string>

    <!--    Hints-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="name_hint">Name</string>

    <string name="remember">Remember</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>

    <!--    Error Mensage-->
    <string name="email_error">Need a email</string>
    <string name="password_error">Need a password</string>
    <string name="name_error">Need a name</string>
    <string name="repeat_password_error">Needs to be the same</string>
    <string name="float_action_button_add">Float Action Button Add</string>
    <string name="search_hint">Seach Games</string>

    <!--    Card Example-->
    <string name="card_game_name_example">MORTAL KOMBAT X</string>
    <string name="card_game_created_example">2018</string>
    <string name="description_hint">Description</string>
    <string name="create_at_hint">Create at</string>
    <string name="save_game">Save Game</string>
    <string name="loren">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?""</string>
    <string name="title_error">Need A Title</string>
    <string name="created_at_error">Neet a Date</string>
    <string name="description_error">Need a Description</string>
</resources>